# call-center

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  start.sh
.claude/templates/: executable-checklist.md
.github/: dependabot.yml
.github/workflows/: ci.yml
admin-ui/: index.html  index.html.legacy  package-lock.json  package.json  vite.config.js
admin-ui/src/: api-cache.js  api.js  auth.js  confirm.js  dropdown-keyboard.js  focus-trap.js  form-guard.js  help-content.js  help.js  i18n.js  main.js  notifications.js  pagination.js  router.js  skeleton.js  sorting.js  theme.js  tooltip.js  tw.js  utils.js  websocket.js
alertmanager/: config.yml  config.yml.tmpl  entrypoint.sh
asterisk/: README.md  ari.conf  extensions.conf  http.conf  queues.conf
audit/: code-vs-docs-audit-2026-02-14-final.md  code-vs-docs-audit-2026-02-14-v2.md  code-vs-docs-audit-2026-02-14-v4.md  doc-audit-2026-02-13.md  next-steps-2026-02-14.md  prompt-system-architecture-review.md  prompt-system-architecture.md  system-improvements.md
audit/prompts/: code-vs-docs-audit.md
development-checklists/admin-convenience/: PROGRESS.md  README.md  phase-01-config-and-cli.md  (+5 more)
doc/: README.md  audit-improvement-suggestions.md  audit-report.md  Скрипт_Консультация по услугам ШМ_20.02.2026.docx  Скрипт_Продажа_20.02.2026.docx  Скрипт_Хранение_20.02.2026.docx
k8s/: README.md  configmap.yml  ingress.yml  kustomization.yml  namespace.yml  secrets.yml
loki/: loki-config.yml  promtail-config.yml
migrations/: env.py
mock-store-api/: Dockerfile  app.py  mock_1c.py
nginx/: default.conf
prometheus/: alerts.yml  prometheus.yml
scripts/: backup_procedures.md  configure_tenants.py  cost_analysis.py  create_future_partitions.py  generate-self-signed-cert.sh  import_vehicle_db.py  load_knowledge_base.py  migrate_hints_to_pg.py  run_load_test.sh  seed_calls.py  seed_knowledge.py  seed_patterns.py  seed_sandbox_starters.py  seed_staging.py  seed_training_data.py  setup_nginx_grafana.sh  smoke_test_staging.sh  stt_ab_test.py
src/: config.py  main.py
tests/: conftest.py
(+694 files in other folders)
